[package]
name = "reputation-net"
version = "0.1.0"
authors = ["Hans-Martin Mosner <hmm@heeg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libp2p = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p = "0.41"
futures = "*"
cidr = "*"
sha2 = "*"
chrono = { version = "*", features = ["clock"] }
base64 = "*"
async-std = { version = "*", features = ["attributes"] }
async-trait = "*"
once_cell = "*"
libsqlite3-sys = "*"
sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite"] }
percent-encoding = "*"
nom = "7"
nom-bufreader = "*"
env_logger = "*"
log = "*"
serde = "*"
serde_json = "*"
itertools = "*"
bitflags = "*"
hex = "*"
toml = "*"
mailparse = "*"
unicase = "*"
lazy_static = "*"
clap = { version = "3", features = ["derive"] }
regex = "1"