[package]
name = "reputation-net"
version = "0.1.0"
authors = ["Hans-Martin Mosner <hmm@heeg.de>"]
edition = "2021"

[features]
autonat = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#alternative: git = "https://github.com/libp2p/rust-libp2p.git"
libp2p = { version = "*", features = ["dns-tokio", "tcp-tokio"] }
futures = "*"
cidr = "*"
sha2 = "*"
chrono = { version = "*", features = ["clock"] }
base64 = "*"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "*"
console-subscriber = "*"
async-trait = "*"
once_cell = "*"
libsqlite3-sys = "*"
sqlx = { version = "*", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
percent-encoding = "*"
nom = "7"
nom-bufreader = "*"
env_logger = "*"
log = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
itertools = "*"
bitflags = "*"
hex = "*"
toml = "*"
mailparse = "*"
unicase = "*"
lazy_static = "*"
clap = { version = "3", features = ["derive"] }
regex = "1"
anyhow = "1"
url = "2"
trust-dns-resolver = { version = "0.21", features = [
    "system-config",
    "tokio-runtime",
] }
axum = "*"
async-recursion = "*"
